Bug 708497: Compute Fitz space origin from adjusted CropBox.

Use the intersection of the CropBox and MediaBox instead of the raw
CropBox when deciding the origin of the Fitz coordinate space.

This way FZ_PAGE_BOX is always [0, 0, w, h] even for files where the
CropBox is out of bounds.